--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <head>
     <meta charset="utf-8">
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/3.0.0/jquery.min.js"></script>
-    <script src="http://sosuke1210.github.io/ikuta/code.jquery.com/jquery-3.5.1.min.js" defer></script>
+    <script src="http://sosuke1210.github.io/ikuta/jquery-3.5.1.min.js" defer></script>
     <script>
     $(function() {
       $('.i').click(function() {
