--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <header>
       <div class="b">
         <li><自由研究></li>
-        <h1 class="c">プログラミングとは</h1>
+        <li class="c">プログラミングとは</li>
       </div>
     </header>
     <div class="a">
